<resources>
    <string name="app_name">ChatBot</string>
    <string name="login1">Login</string>
    <string name="forgot">Forgot Password</string>
    <string name="Enteryouremail">Enter Your Email</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="next">NEXT</string>

    <string name="login">LOGIN</string>
    <string name="signup">Sign Up</string>
    <string name="signup1">SIGN UP</string>
    <string name="full_name">Full Name</string>
    <string name="chat">ChatBot For Heart Attack</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="datebirth">Date of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_havent_account">Do Not have account?</string>
    <string name="login_have_account">Have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>