<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Register">
    <TextView
        android:id="@+id/tv_signup_header"
        android:layout_width="match_parent"

        android:layout_marginBottom="10dp"
        android:layout_height="69dp"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/signup"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="-20dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/tv_signup_header"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="263dp"
        android:layout_height="136dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />
    <TextView
        android:textSize="25sp"
        android:text="@string/chat"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/full_name"
            android:hint="@string/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|textFilter"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|textFilter"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"> <!-- Add this line to enable end icon for password toggle -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|textFilter"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password2Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"> <!-- Add this line to enable end icon for password toggle -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password2"
            android:hint="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|textFilter"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dobLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dob"
            android:hint="@string/datebirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|textFilter"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:background="@color/button_color"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_havent_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_havent_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_have_account"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_sign_up"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Login"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:textColor="@color/button_color"
            android:clickable="true"
            android:textAlignment="center"
            android:onClick="onLoginTextClick" />
    </LinearLayout>
</LinearLayout>