<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Login">

    <TextView
        android:id="@+id/tv_login_header"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/login1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/underline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="159dp"
        android:layout_height="190dp"
        app:layout_constraintTop_toBottomOf="@+id/underline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textChat"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textChat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/chat"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textChat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textNoSuggestions|textFilter"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Repeat the same for password TextInputLayout -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <!-- Add a button for the eye icon -->
        <ImageButton
            android:id="@+id/btnTogglePasswordVisibility"
            android:layout_width="52dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="toggle_password_visibility"
            android:src="@drawable/baseline_remove_red_eye_24" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/button_color"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textInputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/textViewHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"

        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_havent_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_havent_account"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="79dp"
            tools:layout_editor_absoluteY="509dp" />

        <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="72dp"
        android:layout_height="21dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat"
        android:onClick="onSignUpClick"
        android:text=" Sign Up"
        android:textAlignment="center"
        android:textColor="@color/button_color"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="503dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/textViewHaveAccount1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"

        app:layout_constraintTop_toBottomOf="@+id/textViewHaveAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="79dp"
            tools:layout_editor_absoluteY="509dp" />

        <TextView
            android:id="@+id/tv_reset_pass"
            android:layout_width="72dp"
            android:layout_height="21dp"
            android:clickable="true"
            android:fontFamily="@font/montserrat"
            android:onClick="onResetPasswordClick"
            android:text=" Reset Password"
            android:textAlignment="center"
            android:textColor="@color/button_color"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="257dp"
            tools:layout_editor_absoluteY="503dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
